Fixed a problem where an automated document would fail to generate if a value returned from a custom field group is empty.
Enabled the download of the original document via the file history pop-up.

--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/FileStore/FileHistory.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/FileStore/FileHistory.razor
@@ -112,7 +112,7 @@
 
     private string GetFileDownloadLink(Guid fileVersionId)
     {
-        return $"/File/Download/{fileHead.Id}/{fileVersionId}";
+        return $"/File/Download/{fileHead.Id}/{fileVersionId}/False/{Guid.Empty}/{linkType}";
     }
 
     private void ShowFileHistory()
